<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_scan">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/all_rpm_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_add_rpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/all_rpm_value"
                    app:srcCompat="@android:drawable/ic_input_add"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/rpmValues"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_scan_status"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:text="@string/not_scanning"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_status"
        app:layout_constraintTop_toBottomOf="@+id/txt_status" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/not_connected"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_start"
        app:layout_constraintTop_toTopOf="@+id/btn_start" />

    <Button
        android:id="@+id/btn_start_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scanning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_connect"
        app:layout_constraintTop_toTopOf="@+id/btn_connect" />

    <LinearLayout
        android:id="@+id/laft_controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/rpmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_wrapBehaviorInParent="included">

            <TextView
                android:id="@+id/lbl_target_rpm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/target_rpm"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_target_rpm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/zero_init"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/oneMissLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_wrapBehaviorInParent="included">

            <TextView
                android:id="@+id/lbl_one_miss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/single_misses"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_one_miss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/zero_init"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/doubleMissLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_wrapBehaviorInParent="included">

            <TextView
                android:id="@+id/lbl_double_miss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/double_misses"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_double_miss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/zero_init"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalMissLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_wrapBehaviorInParent="included">

            <TextView
                android:id="@+id/lbl_total_miss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_misses"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_total_miss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/zero_init"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_start"
        android:layout_width="147dp"
        android:layout_height="87dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_scan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laft_controls" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>